namespace/harbor/harbor/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: harbor-https
  namespace: harbor
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`harbor.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: traefik
        - name: xfp-header
          namespace: traefik
      services:
        - name: harbor
          port: 80
  tls: 
    secretName: oglesby-io-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: harbor-http
  namespace: harbor
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`harbor.oglesby.io`)
      kind: Rule
      services:
        - name: harbor
          port: 80
      middlewares:
      - name: internal-whitelist
        namespace: traefik
      - name: redirect-https
        namespace: traefik
